--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <h1>Lasanga Recipes</h1>
+    <h1 class="recipe">Lasanga Recipes</h1>
 <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fthecozycook.com%2Fwp-content%2Fuploads%2F2022%2F04%2FLasagna-Recipe-f.jpg&tbnid=I3mJ8C4AcZ_0FM&vet=12ahUKEwjx3PiZ1dmBAxXa5TgGHQN-ASsQMygBegQIARB3..i&imgrefurl=https%3A%2F%2Fthecozycook.com%2Feasy-lasagna-recipe%2F&docid=LDjMpX45enrl3M&w=800&h=600&itg=1&q=lasagna&ved=2ahUKEwjx3PiZ1dmBAxXa5TgGHQN-ASsQMygBegQIARB3"
  alt="lasanga image">
 
- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsa inventore labore magnam tempora veniam repudiandae similique. Ipsum sequi labore quis est animi! Corporis commodi, quos nam magnam animi reiciendis?</p>
+ <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsa inventore labore magnam tempora veniam repudiandae similique. Ipsum sequi labore quis est animi! Corporis commodi, quos nam magnam animi reiciendis?</p>
  
- <h2>Ingedients</h2>
+ <h2 id="ing">Ingedients</h2>
  
  <ul>
     <li>cheese</li>
