--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="index">Odin Recipes</h1>
     <a href="recipes/lasanga.html">lasgna recipe</a>
+    <div class="try">hello asfsd</div>
 </body>
 </html>
