--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1 class="index">Odin Recipes</h1>
     <a href="recipes/lasanga.html">lasgna recipe</a>
     <div class="try">hello asfsd</div>
+    <a href="recipes/flexboxpractice.html"> go to flexbox practice</a>
 </body>
 </html>
